<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <groupId>com.tkzou</groupId>
    <artifactId>forum-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>forum-parent</name>
    <description>MiniForum 微服务拆分父 POM（共享域 / 主业务 / 推荐 / 离线 / 近线 / 演示）</description>

    <properties>
        <java.version>17</java.version>
    </properties>

    <!-- 默认构建轻量、零中间件：不含 flink-nearline（近线 Flink 模块，需 Flink 依赖）。
         生产构建 -Pprod 追加该模块。 -->
    <modules>
        <module>forum-core</module>
        <module>forum-admin-server</module>
        <module>forum-recommend-server</module>
        <module>forum-offline-job</module>
        <module>demo-runner</module>
    </modules>

    <profiles>
        <profile>
            <id>prod</id>
            <modules>
                <module>forum-flink-nearline</module>
            </modules>
        </profile>
    </profiles>

    <!-- 全局共享依赖：Lombok 编译期注解处理（@Getter/@Setter 精简非核心 POJO 样板），
         provided 不进运行包；版本由 spring-boot-starter-parent 管理。 -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
